--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* ---- ESTA ES LA V1.3.1 BUENA (AHORA SÍ) ---- */
 /* --- Importar una fuente PRO (Inter) --- */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
